src/com/ericsson/expressionparser/RuleStringParser.java
package com.ericsson.expressionparser;// Generated from RuleStringParser.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RuleStringParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMA=2, SEMI=3, EQ=4, EQEQ=5, NEQ=6, NLT=7, NGT=8, LT=9, GT=10, 
		NUMINT=11, ADD=12, LTEQ=13, GTEQ=14, LPAREN=15, RPAREN=16, LSQBRACKET=17, 
		RSQBRACKET=18, DOT=19, ID=20, ATSIGN=21, ALIAS=22, STRING=23;
	public static final int
		RULE_attributeName = 0, RULE_attributeName1 = 1, RULE_simpleAttributeValue = 2, 
		RULE_attributeFilter = 3, RULE_numericComparison = 4, RULE_numericOperation = 5, 
		RULE_type = 6, RULE_name = 7, RULE_string = 8;
	public static final String[] ruleNames = {
		"attributeName", "attributeName1", "simpleAttributeValue", "attributeFilter", 
		"numericComparison", "numericOperation", "type", "name", "string"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "','", "';'", "'='", null, "'!='", "'!<'", "'!>'", "'<'", 
		"'>'", null, "'+'", "'<='", "'>='", "'('", "')'", "'['", "']'", "'.'", 
		null, "'@'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "COMMA", "SEMI", "EQ", "EQEQ", "NEQ", "NLT", "NGT", "LT", 
		"GT", "NUMINT", "ADD", "LTEQ", "GTEQ", "LPAREN", "RPAREN", "LSQBRACKET", 
		"RSQBRACKET", "DOT", "ID", "ATSIGN", "ALIAS", "STRING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RuleStringParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RuleStringParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AttributeNameContext extends ParserRuleContext {
		public TerminalNode ATSIGN() { return getToken(RuleStringParser.ATSIGN, 0); }
		public List<TerminalNode> ID() { return getTokens(RuleStringParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RuleStringParser.ID, i);
		}
		public TerminalNode DOT() { return getToken(RuleStringParser.DOT, 0); }
		public AttributeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterAttributeName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitAttributeName(this);
		}
	}

	public final AttributeNameContext attributeName() throws RecognitionException {
		AttributeNameContext _localctx = new AttributeNameContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_attributeName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			match(ATSIGN);
			setState(19);
			match(ID);
			setState(20);
			match(DOT);
			setState(21);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeName1Context extends ParserRuleContext {
		public TerminalNode ATSIGN() { return getToken(RuleStringParser.ATSIGN, 0); }
		public List<TerminalNode> ID() { return getTokens(RuleStringParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RuleStringParser.ID, i);
		}
		public TerminalNode DOT() { return getToken(RuleStringParser.DOT, 0); }
		public AttributeName1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeName1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterAttributeName1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitAttributeName1(this);
		}
	}

	public final AttributeName1Context attributeName1() throws RecognitionException {
		AttributeName1Context _localctx = new AttributeName1Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_attributeName1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			match(ATSIGN);
			setState(24);
			match(ID);
			setState(25);
			match(DOT);
			setState(26);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleAttributeValueContext extends ParserRuleContext {
		public TerminalNode NUMINT() { return getToken(RuleStringParser.NUMINT, 0); }
		public SimpleAttributeValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleAttributeValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterSimpleAttributeValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitSimpleAttributeValue(this);
		}
	}

	public final SimpleAttributeValueContext simpleAttributeValue() throws RecognitionException {
		SimpleAttributeValueContext _localctx = new SimpleAttributeValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simpleAttributeValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			match(NUMINT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeFilterContext extends ParserRuleContext {
		public AttributeFilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeFilter; }
	 
		public AttributeFilterContext() { }
		public void copyFrom(AttributeFilterContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AttributeNumericComparisonSubruleContext extends AttributeFilterContext {
		public AttributeNameContext attributeName() {
			return getRuleContext(AttributeNameContext.class,0);
		}
		public NumericComparisonContext numericComparison() {
			return getRuleContext(NumericComparisonContext.class,0);
		}
		public SimpleAttributeValueContext simpleAttributeValue() {
			return getRuleContext(SimpleAttributeValueContext.class,0);
		}
		public AttributeNumericComparisonSubruleContext(AttributeFilterContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterAttributeNumericComparisonSubrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitAttributeNumericComparisonSubrule(this);
		}
	}
	public static class AttributeNumericOperationSubruleContext extends AttributeFilterContext {
		public AttributeNameContext attributeName() {
			return getRuleContext(AttributeNameContext.class,0);
		}
		public NumericOperationContext numericOperation() {
			return getRuleContext(NumericOperationContext.class,0);
		}
		public AttributeName1Context attributeName1() {
			return getRuleContext(AttributeName1Context.class,0);
		}
		public NumericComparisonContext numericComparison() {
			return getRuleContext(NumericComparisonContext.class,0);
		}
		public SimpleAttributeValueContext simpleAttributeValue() {
			return getRuleContext(SimpleAttributeValueContext.class,0);
		}
		public AttributeNumericOperationSubruleContext(AttributeFilterContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterAttributeNumericOperationSubrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitAttributeNumericOperationSubrule(this);
		}
	}

	public final AttributeFilterContext attributeFilter() throws RecognitionException {
		AttributeFilterContext _localctx = new AttributeFilterContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attributeFilter);
		try {
			setState(40);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new AttributeNumericComparisonSubruleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				attributeName();
				setState(31);
				numericComparison();
				setState(32);
				simpleAttributeValue();
				}
				break;
			case 2:
				_localctx = new AttributeNumericOperationSubruleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				attributeName();
				setState(35);
				numericOperation();
				setState(36);
				attributeName1();
				setState(37);
				numericComparison();
				setState(38);
				simpleAttributeValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumericComparisonContext extends ParserRuleContext {
		public NumericComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numericComparison; }
	 
		public NumericComparisonContext() { }
		public void copyFrom(NumericComparisonContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LessThanOrEqualToSubruleContext extends NumericComparisonContext {
		public TerminalNode LTEQ() { return getToken(RuleStringParser.LTEQ, 0); }
		public LessThanOrEqualToSubruleContext(NumericComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterLessThanOrEqualToSubrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitLessThanOrEqualToSubrule(this);
		}
	}
	public static class NotGreaterThanSubruleContext extends NumericComparisonContext {
		public TerminalNode NGT() { return getToken(RuleStringParser.NGT, 0); }
		public NotGreaterThanSubruleContext(NumericComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterNotGreaterThanSubrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitNotGreaterThanSubrule(this);
		}
	}
	public static class GreaterThanOrEqualToSubruleContext extends NumericComparisonContext {
		public TerminalNode GTEQ() { return getToken(RuleStringParser.GTEQ, 0); }
		public GreaterThanOrEqualToSubruleContext(NumericComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterGreaterThanOrEqualToSubrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitGreaterThanOrEqualToSubrule(this);
		}
	}
	public static class GreaterThanSubruleContext extends NumericComparisonContext {
		public TerminalNode GT() { return getToken(RuleStringParser.GT, 0); }
		public GreaterThanSubruleContext(NumericComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterGreaterThanSubrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitGreaterThanSubrule(this);
		}
	}
	public static class LessThanSubruleContext extends NumericComparisonContext {
		public TerminalNode LT() { return getToken(RuleStringParser.LT, 0); }
		public LessThanSubruleContext(NumericComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterLessThanSubrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitLessThanSubrule(this);
		}
	}
	public static class NotLessThanSubruleContext extends NumericComparisonContext {
		public TerminalNode NLT() { return getToken(RuleStringParser.NLT, 0); }
		public NotLessThanSubruleContext(NumericComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterNotLessThanSubrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitNotLessThanSubrule(this);
		}
	}
	public static class NotEqualToSubruleContext extends NumericComparisonContext {
		public TerminalNode NEQ() { return getToken(RuleStringParser.NEQ, 0); }
		public NotEqualToSubruleContext(NumericComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterNotEqualToSubrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitNotEqualToSubrule(this);
		}
	}

	public final NumericComparisonContext numericComparison() throws RecognitionException {
		NumericComparisonContext _localctx = new NumericComparisonContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_numericComparison);
		try {
			setState(49);
			switch (_input.LA(1)) {
			case LT:
				_localctx = new LessThanSubruleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				match(LT);
				}
				break;
			case GT:
				_localctx = new GreaterThanSubruleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				match(GT);
				}
				break;
			case LTEQ:
				_localctx = new LessThanOrEqualToSubruleContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				match(LTEQ);
				}
				break;
			case GTEQ:
				_localctx = new GreaterThanOrEqualToSubruleContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(45);
				match(GTEQ);
				}
				break;
			case NEQ:
				_localctx = new NotEqualToSubruleContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(46);
				match(NEQ);
				}
				break;
			case NLT:
				_localctx = new NotLessThanSubruleContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(47);
				match(NLT);
				}
				break;
			case NGT:
				_localctx = new NotGreaterThanSubruleContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(48);
				match(NGT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumericOperationContext extends ParserRuleContext {
		public NumericOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numericOperation; }
	 
		public NumericOperationContext() { }
		public void copyFrom(NumericOperationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AddContext extends NumericOperationContext {
		public TerminalNode ADD() { return getToken(RuleStringParser.ADD, 0); }
		public AddContext(NumericOperationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterAdd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitAdd(this);
		}
	}

	public final NumericOperationContext numericOperation() throws RecognitionException {
		NumericOperationContext _localctx = new NumericOperationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_numericOperation);
		try {
			_localctx = new AddContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(ADD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RuleStringParser.ID, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RuleStringParser.ID, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitName(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(RuleStringParser.STRING, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleStringParserListener ) ((RuleStringParserListener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_string);
		try {
			setState(59);
			switch (_input.LA(1)) {
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				match(STRING);
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}